# AirSend

./: .gitignore  AppIcon.icns  CONTRIBUTING.md  Info.plist  LICENSE  LocalSendShareExtension_adhoc  LocalSendShareExtension_cert  README.md  README_en.md  TestDrag.swift  build.sh  build_log.txt  build_output.txt  gen_svg.py  gen_svg_clean.py  icon.icns  render.swift  test_clipboard.swift
AirSend-macOS/: Info.plist  Package.swift  RELEASE_NOTES_v2.1.md  build.sh
AirSend-macOS/.github/: PULL_REQUEST_TEMPLATE.md
AirSend-macOS/.hidden_artifacts/LocalSendShareExtension_bundle.appex/Contents/: Info.plist
AirSend-macOS/Sources/AirSend/: main.swift
AirSend-macOS/Sources/AirSend/Model/: MulticastDto.swift  TransferDto.swift
Android/: Instruction.md  build.gradle.kts  deamon instruction.md  gradle.properties  local.properties  settings.gradle.kts
Android/airsend_daemon/: Cargo.toml
Android/airsend_daemon/src/: main.rs  test_api.rs
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/patches/localsend/: Cargo.toml
Android/patches/native-dialog-stub/: Cargo.toml
Sources/AirSend/: main.swift
Sources/AirSend/Model/: Device.swift  MulticastDto.swift  TransferDto.swift
Sources/AirSend/Service/: ClipboardSender.swift  ClipboardService.swift  FileSender.swift  HTTPTransferServer.swift  UDPDiscoveryService.swift  UpdateService.swift
Sources/AirSend/UI/: DeviceMenuItemView.swift  DropTargetView.swift  DropZoneWindow.swift  MenuSectionHeaderView.swift  UpdateMenuItemView.swift
magisk_module/: module.prop  sepolicy.rule  service.sh
(+31 files in other folders)
